[package]
name = "pacman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
strum = { version = "0.25", features = ["derive"] }
bevy_framepace = "0.14.0"
derive_more = "0.99.17"
fastrand = "2.0.1"
text-to-png = "0.2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
